javali_tests/A3/A4_keinestamSchmid/success/Positive.2.2.6.DOUBLE_DECLARATION.javali
// Rule 2.2.6: There are no two fields with the same name in a single class.

class Main {
	void main() {
		int i;
	}
}

class Gaga {
	int a;
	int b;
}

