javali_tests/A3/A4_keinestamSchmid/fail/Error.2.2.7.DOUBLE_DECLARATION.javali
// Rule 2.2.7: There are no two methods with the same name in a single class.

class Main {
	void main() {
		int i;
	}
}

class A {
	int a;
	int b;

	void swap(int a, int b) {
		int i;
		i = a + b;
	}

	void swap(int a) {
		int i;
		i = a;
	}
}

